--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THE__________ _____ _   _ _____ _   _
 | |/ /| |\ \ _| |_\ \_/ / |___| |\  |║ ╦╠╦╝║ ║║ ║╠═╝
 |___/ \_| \_|\___/ \___/\____/\_| \_/╚═╝╩╚═╚═╝╚═╝╩  
 0N IPFS                          2021
-v2
+v3
                                      
 -->
 <html lang="en">
@@ -93,7 +93,7 @@ v2
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="https://drivengroup.us/web-design/">
+                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
                       <div class="slider--item-image">
                         <img src="assets/img/webdev.jpg" alt="web dev">
                       </div>
@@ -102,7 +102,7 @@ v2
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="https://drivengroup.us/wraps/">
+                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
                       <div class="slider--item-image">
                         <img src="assets/img/wraps.jpg" alt="vehicle wraps">
                       </div>
@@ -111,7 +111,7 @@ v2
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="https://drivengroup.us/signs/">
+                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
                       <div class="slider--item-image">
                         <img src="assets/img/signs.jpg" alt="signs and tradeshows">
                       </div>
