--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ v3
                 <img src="assets/img/introduction-visual.png" alt="graphic design and printing">
               </div>
               <div class="intro--options">
-                <a href="https://drivengroup.us/design/">
+                <a href="https://drivengroup.us/portfolio/">
                   <h3>Graphic Design</h3>
                   <p>Cutting edge visuals for any kind of application. Bring your mental ideas and pencil drawings to life.</p>
                 </a>
@@ -80,7 +80,7 @@ v3
                   <h3>Printing</h3>
                   <p>Limitless media printing solutions including offset & large format printing.</p>
                 </a>
-                <a href="https://drivengroup.us/branding/">
+                <a href="https://drivengroup.us/portfolio/">
                   <h3>Branding &amp; Logos</h3>
                   <p>Product ideas turned into the visual icon that transform your product and leaves a lasting impression.</p>
                 </a>
@@ -93,7 +93,7 @@ v3
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
+                    <a href="https://drivengroup.us/portfolio/">
                       <div class="slider--item-image">
                         <img src="assets/img/webdev.jpg" alt="web dev">
                       </div>
@@ -102,7 +102,7 @@ v3
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
+                    <a href="https://drivengroup.us/portfolio/">
                       <div class="slider--item-image">
                         <img src="assets/img/wraps.jpg" alt="vehicle wraps">
                       </div>
@@ -111,7 +111,7 @@ v3
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="https://drivengroup.us/portfolio/solid-line-3d-letters/">
+                    <a href="https://drivengroup.us/portfolio/">
                       <div class="slider--item-image">
                         <img src="assets/img/signs.jpg" alt="signs and tradeshows">
                       </div>
@@ -156,13 +156,13 @@ v3
                 <img src="assets/img/about-visual.png" alt="About Us">
               </div>
               <div class="about--options">
-                <a href="https://drivengroup.us/consulting/">
+                <a href="https://drivengroup.us/portfolio/">
                   <h3>Consulting</h3>
                 </a>
                 <a href="https://drivengroup.us/web-design/">
                   <h3>Web Dev</h3>
                 </a>
-                <a href="https://drivengroup.us/signs/">
+                <a href="https://drivengroup.us/portfolio/">
                   <h3>Signs</h3>
                 </a>
               </div>
